@@ -14,8 +14,8 @@ rcsb.utils.multiproc >= 0.19
 rcsb.utils.chemref >= 0.91
 scandir; python_version < "3.0"
 configparser; python_version < "3.0"
-rcsb.utils.dictionary >= 1.24
-rcsb.utils.repository >= 0.43
+rcsb.utils.dictionary >= 1.27
+rcsb.utils.repository >= 0.46
 #
 SQLAlchemy == 1.4.46; sys_platform == 'linux'
 # For crate and cockroach -
