@@ -359,3 +359,4 @@
  13-May-2024  V1.721 Update requirements
   1-Jul-2024  V1.722 Pylinting
  13-Aug-2024  V1.723 Update code for pymongo 4.x support
+ 10-Sep-2024  V1.724 Add load completion check for the number of nonpolymer entity instances with validation data
